# dfetch-hub

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  dfetch-devcontainer.patch  dfetch-hub.code-workspace  dfetch-hub.toml  dfetch.yaml  index.html  projects.yaml  pyproject.toml
.devcontainer/: .dfetch_data.yaml  Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: deploy.yml  test.yml
data/: catalog.json
data/github/7bitcoder/: 7bitconf.json  7bitdi.json
data/github/DOCGroup/: ACE_TAO.json
data/github/abseil/: abseil-cpp.json
data/github/abumq/: ripe.json
data/github/an-dr/: abcmake.json
data/github/armmbed/: mbedtls.json
data/github/bakeruk/modern-typescript-monorepo-example/: typescript-example-1.json  typescript-example-2.json
data/github/boostorg/: boost.json
data/github/catchorg/: catch2.json
data/github/clibs/: buffer.json  commander.json  hash.json
data/github/curl/: curl.json
data/github/docgroup/: ACE_TAO.json
data/github/espressif/: esp-idf.json
data/github/faburaya/: 3fd.json
data/github/fmtlib/: fmt.json
data/github/gflags/: gflags.json
data/github/google/: googletest.json
data/github/hkjels/: slug.c.json
data/github/jwerle/: chfreq.c.json  strsplit.h.json
data/github/libuv/: libuv.json
data/github/madler/: zlib.json
data/github/nami-doc/: strlen.c.json  trim.c.json
data/github/nlohmann/: json.json
data/github/openssl/: openssl.json
data/github/rvarago/: absent.json
data/github/sqlite/: sqlite.json
data/github/stephenmathieson/: case.c.json
dfetch-hub/: dfetch_hub.db  pyproject.toml
dfetch-hub/dfetch_hub/: db.py  harvester.py  main.py  models.py  scheduler.py
dfetch-hub/dfetch_hub/frontend/: index.html
dfetch_hub/: __init__.py  cli.py  config.py
dfetch_hub/catalog/: __init__.py  cli.py  clib.py  cloner.py  config.py  detail.py  entry.py  fetcher.py  model.py  tag_filter.py  updater.py  vcpkg.py  writer.py
dfetch_hub/catalog/sources/: __init__.py  clib.py  conan.py  readme.py  vcpkg.py  west.py
dfetch_hub/catalog/store/: __init__.py  fetcher.py  updater.py
dfetch_hub/commands/: __init__.py  publish.py  serve.py  update.py
dfetch_hub/data/: catalog.json
dfetch_hub/data/github/7bitcoder/: 7bitconf.json  7bitdi.json
dfetch_hub/data/github/abseil/: abseil-cpp.json
dfetch_hub/data/github/abumq/: ripe.json
dfetch_hub/data/github/an-dr/: abcmake.json
dfetch_hub/data/github/armmbed/: mbedtls.json
dfetch_hub/data/github/babblesim/: base.json
dfetch_hub/data/github/bakeruk/modern-typescript-monorepo-example/: typescript-example-1.json  typescript-example-2.json
dfetch_hub/data/github/boostorg/: boost.json
dfetch_hub/data/github/clibs/: buffer.json  commander.json  hash.json
dfetch_hub/data/github/curl/: curl.json
dfetch_hub/data/github/docgroup/: ACE_TAO.json
dfetch_hub/data/github/faburaya/: 3fd.json
dfetch_hub/data/github/fmtlib/: fmt.json
dfetch_hub/data/github/google/: googletest.json
dfetch_hub/data/github/hkjels/: slug.c.json
dfetch_hub/data/github/jwerle/: chfreq.c.json  strsplit.h.json
dfetch_hub/data/github/libuv/: libuv.json
dfetch_hub/data/github/madler/: zlib.json
dfetch_hub/data/github/nami-doc/: strlen.c.json  trim.c.json
dfetch_hub/data/github/nlohmann/: json.json
dfetch_hub/data/github/openssl/: openssl.json
dfetch_hub/data/github/rvarago/: absent.json
dfetch_hub/data/github/sqlite/: sqlite.json
dfetch_hub/data/github/stephenmathieson/: case.c.json
dfetch_hub/data/github/zephyrproject-rtos/: acpica.json
dfetch_hub/example_gui/: catalog.json  gui.py  index-demo.html  index.html
dfetch_hub/example_gui/data/: catalog.json
dfetch_hub/example_gui/data/github/abseil/: abseil-cpp.json
dfetch_hub/example_gui/data/github/abumq/: ripe.json
dfetch_hub/example_gui/data/github/an-dr/: abcmake.json
dfetch_hub/example_gui/data/github/nami-doc/: strlen.c.json  trim.c.json
dfetch_hub/project/: cli.py  export.py  input_parser.py  project_finder.py  project_parser.py  project_sources.py  remote_datasource.py
dfetch_hub/site/: index.html
doc/: index.md  program_components.puml
scripts/: check_css.py  check_js.py
test/: test_catalog_clib.py  test_catalog_cloner.py  test_catalog_conan.py  test_catalog_detail.py  test_catalog_entry.py  test_catalog_model.py  test_catalog_readme.py  test_catalog_sources.py  test_catalog_tag_filter.py  test_catalog_vcpkg.py  test_catalog_west.py  test_catalog_writer.py  test_cli.py  test_commands_update.py  test_common.py  test_config.py  test_config_filter.py  test_dfetch_export.py  test_input_parser.py  test_project_finder.py  test_project_parser.py  test_project_sources.py
test/testdata/: dfetch00.yaml  dfetch01.yaml  dfetch_export.yaml  sources00.yaml  versions.yaml  versions01.yaml
