[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dfetch_hub"
version = "0.0.1"
authors = [
  { name="p sacharias", email="p.sacharias@gmail.com" },
  { name="ben spoor", email="b.spoor@edna.eu" },
]
description = "Dfetch Hub"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "dfetch==0.12.1",
    "PyYAML>=6.0.2"
]

[project.optional-dependencies] # https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#writing-pyproject-toml
development = [
    "black==25.1.0",
    "isort==6.0.0",
    "mypy==1.19.1",
    "pre-commit==4.1.0",
    "pylint==3.3.4",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "vcrpy==7.0.0",
    "types-PyYaml==6.0.12"
]
[project.urls]
Homepage = "https://github.com/dfetch-org/dfetch-hub"
Issues = "https://github.com/dfetch-org/dfetch-hub/issues"

[project.scripts]
dfetch-hub = "dfetch_hub.cli:main"

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.format]
max-line-length = "120"

[tool.mypy]
files = "dfetch_hub"
ignore_missing_imports = true
strict = true

